syntax = "proto3";

package erda.core.hepa.domain;
option go_package = "github.com/erda-project/erda-proto-go/core/hepa/domain/pb";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "core/hepa/hepa.proto";

// +publish service:"hepa"
service DomainService {
  // +publish path:"/api/gateway/domains"
  rpc GetOrgDomains(GetOrgDomainsRequest) returns (GetOrgDomainsResponse) {
    option (google.api.http) = {
      get: "/api/gateway/domains?orgId={orgId}&projectId={projectId}&env={env}&pageNo={pageNo}&pageSize={pageSize}&domain={domain}&clusterName={clusterName}&type={type}",
    };
  }

  // +publish path:"/api/gateway/openapi/tenant-domain"
  rpc GetTenantDomains(GetTenantDomainsRequest) returns (GetTenantDomainsResponse) {
    option (google.api.http) = {
      get: "/api/gateway/openapi/tenant-domain?projectId={projectId}&env={env}"
    };
  }
  
  // +private
  rpc ChangeInnerIngress(ChangeInnerIngressRequest) returns (ChangeInnerIngressResponse) {
    option (google.api.http) = {
      put: "/api/gateway/component-ingress",
    };
  }

  // +publish path:"/api/gateway/openapi/runtimes/{runtimeId}/domains"
  rpc GetRuntimeDomains(GetRuntimeDomainsRequest) returns (GetRuntimeDomainsResponse) {
    option (google.api.http) = {
      get: "/api/gateway/openapi/runtimes/{runtimeId}/domains",
    };
  }

  // +publish path:"/api/gateway/openapi/runtimes/{runtimeId}/services/{serviceName}/domains"
  rpc ChangeRuntimeDomains(ChangeRuntimeDomainsRequest) returns (ChangeRuntimeDomainsResponse) {
    option (google.api.http) = {
      put: "/api/gateway/openapi/runtimes/{runtimeId}/services/{serviceName}/domains",
    };
  }
  
}

message GetTenantDomainsRequest {
  string projectId = 1;
  string env = 2;
}

message GetTenantDomainsResponse {
  repeated string data = 1;
}

message ChangeRuntimeDomainsRequest {
  string runtimeId = 1;
  string serviceName = 2;
  string releaseId = 3;
  repeated string domains = 4;
}

message ChangeRuntimeDomainsResponse {
  bool data = 1;
}

message GetRuntimeDomainsResponse {
  map<string, google.protobuf.ListValue> data = 1;
}

message GetRuntimeDomainsRequest {
  string runtimeId = 1;
}

message ChangeInnerIngressResponse {
  bool data = 1;
}

message ChangeInnerIngressRequest {
  string k8sNamespace = 1;
  string componentName = 2;
  int32 componentPort = 3;
  string clusterName = 4;
  string ingressName = 5;
  repeated IngressRoute routes = 6;
  RouteOptions routeOptions = 7;
}

message RouteOptions {
  string rewriteHost = 1;
  string rewritePath = 2;
  bool useRegex = 3;
  google.protobuf.Value enableTls = 4;
  map<string, string> annotations = 5;
  string locationSnippet = 6;
}

message IngressRoute {
  string domain = 1;
  string path = 2;
}

message GetOrgDomainsRequest {
  string orgId = 1;
  string projectId = 2;
  string env = 3;
  int64 pageNo = 4;
  int64 pageSize = 5;
  string domain = 6;
  string clusterName = 7;
  string type = 8;
}

message GetOrgDomainsResponse {
  erda.core.hepa.NewPageResult data = 1;
}